assets/css/style.css
/* ... */
.onboarding-tags:hover .tag-info {
  display: block;
}
@media screen and (max-width: 991px) {
  .signup-bg,
  .signup-bg2 {
    padding: 20px 15px;
  }
  .signup-caption {
    width: 100%;
    text-align: center;
    margin-bottom: 55px;
  }
  .signup-caption p {
    width: 100%;
  }
  .signup-box {
    padding: 30px 15px;
    margin-bottom: 25px;
  }
  .signup-options {
    margin-top: 30px;
  }
  .signup-caption.w50 {
    width: 100%;
  }
}
/* ########## Signup Screen End ########## */
/* ########## Cookie Alert Modal ########## */
.cookies-alert {
  display: none;
  position: fixed;
  bottom: 0;
  left: 0;
  width: 100vw;
  padding: 30px 60px;
  z-index: 99;
  background-color: #fcd9fc;
  color: #747474;
  -webkit-transition: all 200ms linear;
  -o-transition: all 200ms linear;
  transition: all 200ms linear;
}
.cookies-alert p {
  margin: 0;
}
.cookies-alert p a {
  color: #ff6634;
}
.cookies-alert .col-lg-3 {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.allow-cookies-btn {
  border: 2px solid #ff6634;
  color: #ff6634;
  border-radius: 5px;
  padding: 5px 25px;
  margin-right: 15px;
}
.allow-cookies-btn:hover {
  background-color: #ff6634;
  color: #ffffff;
}
.refuse-cookies-btn {
  background-color: #404040;
  border: 2px solid #404040;
  color: #ffffff;
  border-radius: 5px;
  padding: 5px 25px;
}
.refuse-cookies-btn:hover {
  background-color: transparent;
  color: #404040;
}
.cookies-close {
  cursor: pointer;
  font-size: 32px;
  color: #000000;
  margin: 0;
}
@media screen and (max-width: 991px) {
  .cookies-alert {
    padding: 20px 15px;
  }
}
/* ########## Cookie Alert Modal End ########## */
/* ########## About Us, Terms of Use, Privacy policy, Contact Us Page ########## */
.about-hero {
  background: url('../images/about-hero.png') center;
  background-size: cover;
  padding: 150px 15px;
}
.about-hero h3 {
  font-family: 'Montserrat-ExtraBold';
  font-size: calc(18px + (28 - 18) * ((100vw - 300px) / 1300));
  color: #ffffff;
  width: 55%;
  margin: 0 auto;
  text-align: center;
}
.about-tab {
  padding: 0 90px;
  overflow: auto;
  white-space: nowrap;
}
.about-tab li {
  display: inline-block;
  padding: 15px;
  color: #555555;
}
.about-tab li:hover {
  color: #ff6634;
}
.about-tab .active {
  color: #ff6634;
  border-bottom: 2px solid #ff6634;
}
.about {
  padding: 60px 90px;
  overflow: hidden;
}
.about h3,
.terms h3,
.contact-form h5 {
  font-family: 'Montserrat-ExtraBold';
  margin: 0;
}
.terms h3 {
  font-size: 1.3rem;
  margin-bottom: 10px;
}
.terms {
  margin-bottom: 40px;
}
.terms p {
  margin-bottom: 10px;
  text-align: justify;
}
.terms p span {
  font-family: 'Montserrat-SemiBold';
  color: #303030;
}
.about-us {
  display: flex;
  align-items: center;
  padding: 50px 0;
  border-bottom: 1px solid #ececec;
}
.blab-icon {
  padding: 0 90px 0 30px;
}
.mission {
  padding: 90px 0;
}
.mission h5 {
  font-family: 'Montserrat-ExtraBold';
}
.about .free-account-box {
  margin: 0;
}
.contact-form form {
  margin-top: 35px;
}
.contact-sidebar-header {
  font-family: 'Montserrat-Bold';
  padding: 10px 20px;
  border-bottom: 1px solid #f4f4f4;
  background-color: #fcfcfc;
  color: #303030;
}
.contact-sidebar,
.claim-my-business {
  border: 1px solid #f4f4f4;
  margin-bottom: 45px;
}
.contact-sidebar ul {
  padding: 15px 20px;
}
.contact-sidebar ul li {
  margin-bottom: 15px;
}
.contact-sidebar ul li span {
  color: #303030;
  font-family: 'Montserrat-Medium';
}
.contact-sidebar ul li i {
  color: #333333;
  font-size: 24px;
  margin-right: 5px;
}
@media screen and (max-width: 991px) {
  .about-hero {
    padding: 60px 15px;
  }
  .about-hero h3 {
    width: 100%;
  }
  .about-tab {
    padding: 0 10px;
  }
  .about-tab li {
    display: inline-block;
    padding: 15px 5px;
  }
  .about {
    padding: 40px 15px;
  }
  .about-us {
    flex-direction: column;
    padding: 30px 0;
  }
  .blab-icon {
    width: 180px;
    padding: 0 30px 30px;
  }
  .mission {
    padding: 30px 0;
  }
  .contact-form form {
    margin-top: 35px;
  }
}
/* ########## About Us, Terms of Use, Privacy policy, Contact Us Page End ########## */
/* ########## Business Details Screen ########## */
.business-details-header {
  display: flex;
  margin-bottom: 10px;
}
.business-img {
  width: 150px;
  height: 150px;
  overflow: hidden;
}
.business-info {
  width: calc(100% - 150px);
  padding-left: 20px;
}
.business-info h3 {
  display: inline-block;
}
.business-info .claimed {
  display: inline-block;
  color: #4bd37b;
}
.business-info .location {
  margin: 15px 0;
  text-align: right;
}
.business-info .address {
  font-family: 'Montserrat-Medium';
  border-top: 1px solid #f4f4f4;
  padding: 10px 0;
  color: #303030;
}
.business-tab {
  margin-top: 30px;
  width: 100%;
}
.business-tab .tab-nav {
  border-bottom: 1px solid #f4f4f4;
  padding: 0;
  margin: 0;
}
.business-tab .tab-nav li {
  font-family: 'Montserrat-SemiBold';
  display: inline-block;
  font-size: 13px;
}
.business-tab .tab-nav li a {
  display: block;
  padding: 10px 15px;
  background-color: #f4f4f4;
  text-transform: capitalize;
  color: #303030;
}
.business-tab .tab-nav li.active a {
  background-color: #ff6634;
  color: #ffffff;
  border-bottom: none;
}
.business-tab .tab-nav li:hover {
  color: #ff6634;
}
.tab-content {
  padding: 50px;
}
.input-rating p {
  color: #aaaaaa;
  font-family: 'Montserrat-Medium';
  margin-bottom: 10px;
}
.input-rating ul li {
  display: inline-block;
  width: 70px;
  font-size: 11px;
  text-align: center;
  color: #a5a5a5;
  cursor: pointer;
  position: relative;
  vertical-align: top;
}
.input-rating .icon {
  height: 35px;
  width: 35px;
  margin: 0 auto 5px;
}
.input-rating input[type='radio'],
.blab-ratings input[type='radio'] {
  display: none;
}
.star1 .icon {
  background: url('../images/furious-black.png') no-repeat center;
}
.star1:hover .icon,
.star1 .icon.show {
  background: url('../images/furious.png') no-repeat center;
}
/* ... */

